env: jar build setting

--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,25 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    // logging
+    implementation('org.slf4j:slf4j-api:2.0.17')
+    runtimeOnly('ch.qos.logback:logback-classic:1.5.18')
 }
 
 test {
     useJUnitPlatform()
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'org.webserver.startup.BootStrap'
+        )
+    }
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
